# QtDockTile

./: .directory  .gitignore  .gitmodules  CMakeLists.txt  INSTALL  INSTALL.md  QtDockIcon.pro  README  README.md  cmake_uninstall.cmake.in  docktile.prf  plugins.pri  qtdockicon.cpp  qtdockicon.h  qtdockicon_global.h  qtdockicon_p.h  qtdockmanager.cpp  qtdockmanager_p.h  qtdockprovider.cpp  qtdockprovider.h  qtdocktile.cpp  qtdocktile.h  qtdocktile.pro  qtdocktile.qbp  qtdocktile.qbs  qtdocktile_global.h  qtdocktile_p.h  sync.profile
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml.in
doc/config/: qt-html-templates.qdocconf  qtdocktile-online.qdocconf  qtdocktile-project.qdocconf  qtdocktile.qdocconf
doc/config/images/: .directory
doc/src/: index.qdoc
doc/src/images/: .directory
example/: CMakeLists.txt  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  simpledock.desktop
examples/: CMakeLists.txt
examples/simpledock/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  simpledock.desktop
lib/: CMakeLists.txt  pluginloader.cpp  pluginloader.h  qtdockmanager.cpp  qtdockmanager_p.h  qtdockprovider.cpp  qtdockprovider.h  qtdocktile.cpp  qtdocktile.h  qtdocktile_global.h
modules/: qt_docktile.pri
plugins/: CMakeLists.txt  plugins.pri
plugins/mac/: CMakeLists.txt  mac.pro  macdocktile.h  macdocktile.mm
plugins/unity/: CMakeLists.txt  unitylauncher.cpp  unitylauncher.h
plugins/windows/: CMakeLists.txt  jumplistsmenuexporter.cpp  jumplistsmenuexporter.h  jumplistsmenuexporter_p.h  temporaryicon.cpp  temporaryicon.h  windowstaskbar.cpp  windowstaskbar.h
plugins/windows/wrapper/: CMakeLists.txt  handling.cpp  handling.h  jumplistsmanager.cpp  jumplistsmanager.h  taskbar.cpp  taskbar.h  temporaryfile.cpp  temporaryfile.h
quick/: CMakeLists.txt  quickdocktile.cpp  quickdocktile.h
src/: CMakeLists.txt  lib.qbs  src.pro
src/imports/: CMakeLists.txt
src/imports/docktile/: CMakeLists.txt
src/imports/docktile/qmldir/: qmldir
src/imports/docktile/src/: quickdocktile.cpp  quickdocktile.h
src/imports/playground/: CMakeLists.txt  qmldir  quickdocktile.cpp  quickdocktile.h
src/lib/: CMakeLists.txt  lib.pro  pluginloader.cpp  pluginloader_p.h  qtdockmanager.cpp  qtdockmanager_p.h  qtdockprovider.cpp  qtdockprovider.h  qtdocktile.cpp  qtdocktile.h  qtdocktile.pc.cmake  qtdocktile_global.h  qtdocktile_p.h
src/plugins/: CMakeLists.txt  DockTilePlugin.qbs  plugins.pro
src/plugins/mac/: CMakeLists.txt  mac.pro  mac.qbs  macdocktile.h  macdocktile.mm
src/plugins/unity/: CMakeLists.txt  unity.pro  unity.qbs  unitylauncher.cpp  unitylauncher.h
src/plugins/windows/: CMakeLists.txt  jumplistsmenuexporter_p.h  windows.qbs  windowstaskbar.cpp  windowstaskbar.h
src/plugins/windows/wrapper/: CMakeLists.txt  _ICustomDestinationList.h  _ITaskbarList4.h  _winapi.cpp  _winapi.h  handling.cpp  jumplistsmanager.cpp  jumplistsmanager.h  taskbar.cpp  taskbar.h
